
(executable
 (name web)
 (modules web)
 (libraries brr fabula)
 (modes js))

(rule
 (deps (glob_files story.html))
 (action
   (with-stdout-to embedded.ml
     (progn
       (echo "let index = {|")
       ; (cat story.html)
       (run sed s@_build/default/web.bc.js@runtime.js@ story.html)
       (echo "|}")
       (echo "let default_css = {|")
       (cat default.css)
       (echo "|}")
       (echo "let runtime = {|")
       (cat web.bc.js)
       (echo "|}")
       (echo "let interpret = {|")
       (cat interpret.js)
       (echo "|}")))))

(executable
 (name fable)
 (public_name fable)
 (modules fable embedded)
 (libraries fabula)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.std)))

(env (dev (flags (:standard -warn-error -A))))