
(executable
 (name fablejs)
 (modules fablejs)
 (libraries brr fabula)
 (modes js))

(rule
 (deps story.html)
 (action
   (with-stdout-to embedded.ml
     (progn
       (echo "let index title extra = Format.asprintf {|")
       ; (cat story.html)
       (run sed s@_build/default/fablejs.bc.js@runtime.js@ story.html)
       (echo "|} title extra\n")
       (echo "let default_css = {|")
       (cat default.css)
       (echo "|}")
       (echo "let runtime = {|")
       (cat fablejs.bc.js)
       (echo "|}")
       (echo "let interpret = {|")
       (cat interpret.js)
       (echo "|}")
       (echo "let test = {|")
       (cat test/runtime.t/test.js)
       (echo "|}")))))

(executable
 (name fable)
 (public_name fable)
 (modules fable embedded)
 (libraries fabula)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.std)))

(env (dev (flags (:standard -warn-error -A))))

(subdir deploy
 (rule
  (alias editor)
  (deps ../story.html
   (glob_files ../web/*)
   (glob_files ../examples/*.md)
   ../editor/examples.sh ../editor/editor.html)
  (action (progn
   (copy ../fablejs.bc.js fablejs.bc.js)
   (copy ../editor/editor.js editor.js)
   ; (copy ../editor/editor.html index.html)
   (with-stdout-to index.html
    (run ../editor/examples.sh ../editor/editor.html))
   ; (copy ../story.html story.html)
   (with-stdout-to story.html
    (run sed -e s/%s// -e s@_build/default/fablejs.bc.js@fablejs.bc.js@ ../story.html))
   (write-file story.js "var story = [];")
   (copy ../interpret.js interpret.js)
   (copy ../default.css default.css)))))
